# SherkSQL

./: README.md
src/: CMakeLists.tpl  CMakeLists.txt  sherkSQL.c  sherkSQL.h  sqlparse.c
src/include/const/: sql_type.h
src/module/analyst/: analyst.c  analyst.h
src/module/architecture/storage/file/: fd.c
src/module/builder/: builder.c
src/module/executor/: executor.c  executor.h
src/module/extractor/: extractor.c  extractor.h
src/module/interviewer/: interviewer.c
src/module/parser/: parser.c  parser.h
src/sqlparse/: CMakeLists.txt
src/sqlparse/module/architecture/storage/buffer/: bufmgr.c
src/system/: CMakeLists.txt  system.c
